--- a/src/app/publico/inicio/inicio.component.html
+++ b/src/app/publico/inicio/inicio.component.html
@@ -2,12 +2,43 @@
   <div class="container">
     <div class="row">
       <div class="col s12 m6">
-        <h1>Bienvenido a Inmobiliaria  </h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida felis sed eleifend aliquet.</p>
+        <h1>Bienvenido a Inmobiliaria</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida
+          felis sed eleifend aliquet.
+        </p>
         <a href="#" class="btn-large">Ver propiedades</a>
       </div>
       <div class="col s12 m6">
-        <img src="https://1.bp.blogspot.com/-Q6gMsffyvcM/UM1DbhYa1YI/AAAAAAAAAH4/aqQ2Cx-siOY/s1600/Luxury+House+in+San+Diego.jpg" alt="Imagen de casa" class="responsive-img">
+        <img
+          src="https://1.bp.blogspot.com/-Q6gMsffyvcM/UM1DbhYa1YI/AAAAAAAAAH4/aqQ2Cx-siOY/s1600/Luxury+House+in+San+Diego.jpg"
+          alt="Imagen de casa"
+          class="responsive-img"
+        />
+      </div>
+    </div>
+
+    <div class="row">
+      <div *ngFor="let r of listaRegistros" class="col s3">
+        <div class="card">
+          <div class="card-image">
+            <img src="{{ r.foto }}" alt="" srcset="" />
+            <span style="background-color: rgba(0, 0, 0, 0.4); width: 100%; padding: 0.5em;" class="card-title">{{ r.name }}</span>
+          </div>
+
+          <div style="color: black" class="card-content">
+            <p>
+              el precio del inmueble es:
+              <strong>{{ r.precioVenta | currency }}</strong>
+            </p>
+            <p>
+              el alquiler es: <strong>{{ r.precioAlquiler | currency }}</strong>
+            </p>
+          </div>
+          <div class="card-action">
+            <a routerLink="/inmueble/{{r._id}}">Ver</a>
+          </div>
+        </div>
       </div>
     </div>
   </div>
