--- a/src/app/publico/pagina-maestra/menu-lateral/menu-lateral.component.html
+++ b/src/app/publico/pagina-maestra/menu-lateral/menu-lateral.component.html
@@ -13,12 +13,9 @@
       >
     </div>
   </li>
-  
-  <li *ngFor="let m of listaMenus">
-    <a style="color: red;" routerLink="{{ m.ruta }}">{{ m.texto }}</a>
-  </li> 
-
-
+  <!-- <li *ngFor="let m of listaMenus">
+    <a routerLink="{{ m.ruta }}">{{ m.texto }}</a>
+  </li> -->
 </ul>
 <a href="#" data-target="slide-out" class="sidenav-trigger"
   ><i class="material-icons">menu</i></a
