I) visualizacion de menu lateral con permisos - II) listado de inmuebles en el inicio - III) guardianes | CanActivate

--- a/src/app/publico/inicio/inicio.component.html
+++ b/src/app/publico/inicio/inicio.component.html
@@ -7,7 +7,7 @@
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida
           felis sed eleifend aliquet.
         </p>
-        <a href="#" class="btn-large">Ver propiedades</a>
+        <button class="btn-large">Ver propiedades</button> 
       </div>
       <div class="col s12 m6">
         <img
