mejoras en pie de pagina, y ruta no encontrada

--- a/src/app/modulos/informacion/asesores/asesores.component.html
+++ b/src/app/modulos/informacion/asesores/asesores.component.html
@@ -2,7 +2,7 @@
   <div class="col s12 img-container">
     <!-- Imagen del asesor -->
     <img
-      src="https://blog.cualessontusmetas.com/wp-content/uploads/2012/09/trabajo-asesor-financiero.jpg"
+      src=" https://www.remaxcompras.com/wp-content/uploads/2018/02/visitas-inmuebles.jpg"
       alt="asesor"
       class="responsive-img"
     />
@@ -12,11 +12,6 @@
       <div class="card-content">
         <!-- Información del asesor -->
         <span class="card-title">Asesor de inmuebles</span>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed id magna
-          enim. Aliquam congue nunc eu odio elementum, vitae ullamcorper purus
-          dapibus. Nulla pharetra enim in velit auctor molestie.
-        </p>
         <br />
         <p>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae
