--- a/src/app/modulos/informacion/mision/mision.component.html
+++ b/src/app/modulos/informacion/mision/mision.component.html
@@ -17,7 +17,7 @@
     <div class="col s12 m6 section-cards">
       <div class="card medium black">
         <div class="card-image waves-effect waves-block waves-light">
-          <img class="responsive-img" src="https://quantum.pe/wp-content/uploads/2021/11/negocio-inmobiliaria.png"/>
+          <img class="responsive-img" src="https://blogs.unsw.edu.au/nowideas/files/2019/05/inmobiliaria-online.jpg"/>
         </div>
         <div class="card-content white-text">
           <span class="card-title activator">Visión<i class="material-icons right">more_vert</i></span>
