--- a/src/app/publico/errores/error-de-servidor/error-de-servidor.component.html
+++ b/src/app/publico/errores/error-de-servidor/error-de-servidor.component.html
@@ -1,1 +1,3 @@
-<p>error-de-servidor works!</p>
+<p>¡Ups! Ha ocurrido un error en el servidor.</p>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTWl-utV3HWCbsoYDSS7F-0SZkrRy1DnDVNHA" alt="Error del servidor">
+
