--- a/src/app/publico/errores/ruta-no-encontrada/ruta-no-encontrada.component.html
+++ b/src/app/publico/errores/ruta-no-encontrada/ruta-no-encontrada.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <h1>Ruta no encontrada</h1>
     <p>Lo sentimos, la página que buscas no existe.</p>
-    <img src="https://cdn.pixabay.com/photo/2016/01/19/16/50/error-1144731_1280.jpg" alt="Error 404">
+    <img src="https://tusipuedes327857140.files.wordpress.com/2020/07/error-404.png" alt="Error 404">
     <a href="#" class="btn-large">Volver al inicio</a>
   </div>
