Mejoras en el front de asesor, contacto, recuperar clave y segundo factor

--- a/src/app/modulos/informacion/asesores/asesores.component.html
+++ b/src/app/modulos/informacion/asesores/asesores.component.html
@@ -2,7 +2,7 @@
   <div class="col s12 img-container">
     <!-- Imagen del asesor -->
     <img
-      src=" https://www.remaxcompras.com/wp-content/uploads/2018/02/visitas-inmuebles.jpg"
+      src="https://img.caminofinancial.com/wp-content/uploads/2019/10/07154010/iStock-1141142286-1024x683.jpg"
       alt="asesor"
       class="responsive-img"
     />
