--- a/src/app/modulos/seguridad/identificacion-twofa/identificacion-twofa.component.css
+++ b/src/app/modulos/seguridad/identificacion-twofa/identificacion-twofa.component.css
@@ -2,15 +2,7 @@
   width: 500px;
 }
 
-.card {
-  margin-top: 50px;
-  margin-block-end: 90px;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  -moz-transform: translate(-50%, -50%);
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  -o-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+.container{
+  margin-top: 150px;
+  margin-block-end: 100px;
 }
