--- a/src/app/publico/pagina-maestra/encabezado/encabezado.component.html
+++ b/src/app/publico/pagina-maestra/encabezado/encabezado.component.html
@@ -1,10 +1,10 @@
 <nav class="black">
   <div class="nav-wrapper">
     <a routerLink="/inicio" class="brand-logo white-text">
-      <span class="animated-text brand-logo-text"
-        >Inmu<strong>Locos</strong></span
-      >
+      <i class="material-icons">home</i>
+      <span class="animated-text brand-logo-text">Aki<strong>Muebles</strong></span>
     </a>
+    
 
     <ul id="nav-mobile" class="right hide-on-med-and-down">
       <li>
