--- a/src/app/modulos/seguridad/identificacion-twofa/identificacion-twofa.component.html
+++ b/src/app/modulos/seguridad/identificacion-twofa/identificacion-twofa.component.html
@@ -1,4 +1,6 @@
-<div id="login-page" class="row">
+<div class="container">
+
+  <div id="login-page" class="row">
     <div class="col s12 z-depth-6 card-panel">
       <form class="login-form" [formGroup]="fGroup" >
         <div class="row">
@@ -17,3 +19,5 @@
       </form>
     </div>
   </div>
+
+</div>
