--- a/src/app/modulos/seguridad/recuperar-clave/recuperar-clave.component.css
+++ b/src/app/modulos/seguridad/recuperar-clave/recuperar-clave.component.css
@@ -1,14 +1,9 @@
 #login-page {
-    width: 500px;
- }
- 
- .card {
-      position: absolute;
-      left: 50%;
-      top: 50%;
-      -moz-transform: translate(-50%, -50%);
-      -webkit-transform: translate(-50%, -50%);
-      -ms-transform: translate(-50%, -50%);
-      -o-transform: translate(-50%, -50%);
-      transform: translate(-50%, -50%);
- }
+  width: 500px;
+}
+
+
+.container {
+     margin-top: 100px;
+     margin-block-end: 200px;
+}
