--- a/src/app/publico/pagina-maestra/encabezado/encabezado.component.html
+++ b/src/app/publico/pagina-maestra/encabezado/encabezado.component.html
@@ -19,6 +19,9 @@
         <a  *ngIf="!sesionActiva" routerLink="/informacion/contacto" class="white-text">Contacto</a>
       </li>
       <li>
+        <a  *ngIf="sesionActiva" routerLink="/informacion/contacto" class="white-text">Contacto</a>
+      </li>
+      <li>
         <a  *ngIf="!sesionActiva" routerLink="/informacion/nuestros-asesores" class="white-text">Nuestros acesores</a>
       </li>
       <li>
