--- a/src/app/publico/inicio/inicio.component.html
+++ b/src/app/publico/inicio/inicio.component.html
@@ -29,8 +29,8 @@
       <div *ngFor="let r of listaRegistros" class="col s3">
         <div class="card">
           <div class="card-image">
-            <img src="{{ r.foto }}" alt="" srcset="" />
-            <span style="background-color: rgba(0, 0, 0, 0.4); width: 100%; padding: 0.5em;" class="card-title">{{ r.name }}</span>
+            <img src="{{ r.foto }}" style="height: 200px; object-fit: cover;" alt="" srcset="" />
+            <span style="background-color: rgba(0, 0, 0, 0.4); width: 100%;" class="card-title">{{ r.name }}</span>
           </div>
 
           <div style="color: black" class="card-content">
