--- a/src/app/modulos/parametros/cliente/listar-cliente/listar-cliente.component.html
+++ b/src/app/modulos/parametros/cliente/listar-cliente/listar-cliente.component.html
@@ -3,25 +3,46 @@
 <br />
 
 <table>
-    <thead>
-      <tr>
-          <th>Nombre</th>
-          <th>Correo</th>
-          <th>Celular</th>
-          <th>Dirección</th>
-          <th>Acciones</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let r of listaRegistros.registros">
-        <td>{{r.primerNombre}} {{r.segundoNombre}} {{r.primerApellido}} {{r.segundoApellido}}</td>
-        <td>{{r.correo}}</td>
-        <td>{{r.celular}}</td>
-        <td>{{r.direccion}}</td>
-        <td>
-            <a routerLink="/parametros/cliente-editar/{{r.id}}" class="btn orange">Editar Registro</a>&nbsp;
-            <a routerLink="/parametros/cliente-eliminar/{{r.id}}" class="btn red">Eliminar Registro</a>
-        </td>
-      </tr>
-        </tbody>
-  </table>
+  <thead>
+    <tr>
+      <th>Nombre</th>
+      <th>Correo</th>
+      <th>Celular</th>
+      <th>Metodo de pago</th>
+      <th>Acciones</th>
+    </tr>
+  </thead>
+  <tbody>
+    <!--| paginate: {itemsPerPage:registrosPorPagina,currentPage:pag,totalItems:0}-->
+    <tr *ngFor="let r of listaRegistros| paginate : {itemsPerPage: registrosPorPagina,currentPage: pag, totalItems: 0}">
+      <td>{{ r.name }}</td>
+      <td>{{ r.emailAddress }}</td>
+      <td>{{ r.phoneNumber }}</td>
+      <td>{{ r.paymentMethod }}</td>
+      <td>
+        <a
+          routerLink="/parametros/cliente-editar/{{ r._id }}"
+          class="btn orange"
+          >Editar Registro</a
+        >&nbsp;
+        <a routerLink="/parametros/cliente-eliminar/{{ r._id }}" class="btn red"
+          >Eliminar Registro</a
+        >
+      </td>
+    </tr>
+
+    <tr>
+      <td colspan="5">
+        <pagination-controls
+          (pageChange)="pag = $event; ListarRegistros()"
+          previousLabel="Anterior"
+          nextLabel="Siguiente"
+          screenReaderPaginationLabel="Navegación"
+          screenReaderPageLabel="Página"
+          screenReaderCurrentLabel="Página Actual"
+        >
+        </pagination-controls>
+      </td>
+    </tr>
+  </tbody>
+</table>
