--- a/src/app/publico/inicio/inicio.component.html
+++ b/src/app/publico/inicio/inicio.component.html
@@ -30,7 +30,7 @@
         <div class="card">
           <div class="card-image">
             <img src="{{ r.foto }}" style="height: 200px; object-fit: cover;" alt="" srcset="" />
-            <span style="background-color: rgba(0, 0, 0, 0.4); width: 100%;" class="card-title">{{ r.name }}</span>
+            <span style="background-color: rgba(0, 0, 0, 0.4); width: 100%;" class="card-title">{{ r.nombre }}</span>
           </div>
 
           <div style="color: black" class="card-content">
