CRUD en angular - accion editar un registro

--- a/src/app/modulos/parametros/inmueble/crear-inmuebles/crear-inmuebles.component.html
+++ b/src/app/modulos/parametros/inmueble/crear-inmuebles/crear-inmuebles.component.html
@@ -1,5 +1,5 @@
 <fieldset class="center container">
-  <legend>Creación de Productos</legend>
+  <legend>Creación de Inmuebles</legend>
   <div class="row">
     <form class="col s12" [formGroup]="cargaArchivoFG">
       <div class="row">
@@ -99,8 +99,8 @@
         </div>
 
         <div class="input-field col s4">
-          <label for="precioAlquiler">Estado(Disponible,Alquilado,Vendido)</label>
-            <input formControlName="estado" id="estado" type="text" />
+          <label for="estado">Estado(Disponible,Alquilado,Vendido)</label>
+          <input formControlName="estado" id="estado" type="text" />
 
           <!-- <label for="estado">Estado</label>
           
