--- a/src/app/publico/inicio/inicio.component.html
+++ b/src/app/publico/inicio/inicio.component.html
@@ -7,7 +7,7 @@
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida
           felis sed eleifend aliquet.
         </p>
-        <button class="btn-large">Ver propiedades</button> 
+        <button class="btn-large" routerLink="/parametros/inmueble-listar">Ver propiedades</button> 
       </div>
       <div class="col s12 m6">
         <img
@@ -43,7 +43,7 @@
             </p>
           </div>
           <div class="card-action">
-            <a routerLink="/inmueble/{{r._id}}">Ver</a>
+            <a routerLink="/inmuebles/{{r._id}}">Ver</a>
           </div>
         </div>
       </div>
