--- a/src/app/modulos/parametros/inmueble/eliminar-inmueble/eliminar-inmueble.component.html
+++ b/src/app/modulos/parametros/inmueble/eliminar-inmueble/eliminar-inmueble.component.html
@@ -1,1 +1,33 @@
-<p>eliminar-inmueble works!</p>
+<fieldset class="center container">
+  <legend>Edición de Inmuebles</legend>
+  <div class="row">
+    <div class="row"></div>
+    <div class="row">
+      <div class="col s12">
+        <strong>¿confirma la eliminacion de estos datos?</strong>
+      </div>
+    </div>
+    <div class="row">
+      <div class="showImage center-align">
+        <img
+          src="{{ BASE_URL }}ObtenerArchivo/1/{{ foto }}"
+          class="imagenInmueble"
+        />
+      </div>
+    </div>
+    <div class="row">
+      <div class="col s4">Nombre: {{ nombre }}</div>
+      <div class="col s4">Estado: {{ estado }}</div>
+      <div class="col s4">Precio venta: {{ precioVenta }}</div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="input-field col s12">
+      <a routerLink="/parametros/inmueble-listar" class="btn red">Cancelar</a
+      >&nbsp;
+      <button (click)="EliminarRegistro()" class="btn waves-effect waves-light">
+        Confirmar
+      </button>
+    </div>
+  </div>
+</fieldset>
