--- a/src/app/publico/inicio/inicio.component.html
+++ b/src/app/publico/inicio/inicio.component.html
@@ -43,7 +43,7 @@
             </p>
           </div>
           <div class="card-action">
-            <a routerLink="/inmuebles/{{r._id}}">Ver</a>
+            <a href="http://localhost:3001/inmuebles/{{r._id}}">Ver</a>
           </div>
         </div>
       </div>
